src/components/SideBar.module.css
.container{
    display: flex;
    flex-direction: row;
    width: 75px;
    position: fixed;
    left: 0;
    top: 82px;
    height: 100%;
    /* padding: 5px; */
    /* box-shadow: 8px 10px 5px -5px var(--themeColorLight); */

    z-index: 10000;
}
.sideBar{
    position: relative;
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 100%;
    overflow-x: hidden;
    z-index: 100;
}
.background{
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    /* background-color: rgb(12, 28, 52); */
    /* background: rgb(64, 73, 87) */
    /* background-image: linear-gradient(to top, var(--themeColorLight) 90%, var(--themeColorDark), 100%,transparent); */
    background-image: linear-gradient(to bottom right, var(--themeColorDark) 40%, var(--themeColorLight) 100%);

    /* background-color: var(--themeColorLight); */

    
    z-index: -1;
}
.iconContainer{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    height: 100%;
    width: 100%;
    /* min-height: calc(100% - 70px); */
    min-width: 300px;
    gap: 2;
}
.itemWrapper{
    display: flex;
    width: 100%;
    color: white;
    margin-top: 1em;
}
.icon{
    margin-left: 1.25em;
    height: 40px;
    width: 40px;
    max-height: 50px;
    max-width: 50px;
    display: block;
    object-fit: contain;
    cursor: pointer;
}
.iconImage{
    height: 100%;
    width: 100%;
}
.text{
    display: flex;
    flex-direction: column;
    justify-content: center;
    /* text-align: center; */
    padding: 0 0.75em 0 0.75em;
    height: 50px;
    border-radius: 5px;
    /* padding-top: 5px; */
    margin-left: 1em;
    width: 60%;
    font-size: 18px;
    cursor: pointer;
}
.text:hover{
    background-color: rgb(34, 34, 34);
}

